# Remote-file-transfer

./: README.md
Client/: CMakeLists.txt  main.c  untitled.manifest  untitled.rc
Server/: CMakeLists.txt  server.c
